# i2c-slave

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  slave-util.sh
include/: i2c-slave-eeprom.h  smbus.h
openbmc/: amd_server_kernel.patch  i2c-aspeed.c  i2c-aspeed.patch  i2c-slave-eeprom.c  i2c-slave-eeprom.h
smbus/: CMakeLists.txt  smbus.c
test/: CMakeLists.txt  i2c_debug.c  smbus_protocols.h  test_master.c  test_slave.c  test_utils.c  test_utils.h
